bugs correction(z-index)

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -77,7 +77,7 @@
   width: 100vw;
   height: 20vh;
   position: relative;
-  z-index: -1;
+  z-index: 2;
   background: linear-gradient(178.24deg, #753BC5 47.57%, rgba(117, 59, 197, 0) 47.58%);
   
   .wave {
@@ -143,7 +143,7 @@
 }
 .c-player {
   background: #f5f5fb;
-  z-index: -2;
+  z-index: 1;
   position: relative;
   top: -50px;
 }
@@ -243,7 +243,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   position: relative;
   background: #fff;
   padding: 40px;
@@ -327,7 +327,7 @@
 
   ul {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
     
     li{
